Custom date picker.

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "mt-changelog": "^0.6.1",
     "react": "^15.3.0",
     "react-bootstrap": "^0.28.0",
+    "react-datepicker": "^0.53.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-docgen": "^2.14.1",
